<resources>
    <string name="app_name">My Application</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password">Пароль:</string>
    <string name="login">Логин:</string>
    <string name="signIn">Войти:</string>
    <string name="address">Адрес:</string>
    <string name="phone">Телефон:</string>
    <string name="customer">Заказчик:</string>
    <string name="discriptionOrder">Описание заказа:</string>
    <string name="camera">Camera</string>
    <string name="title_activity_maps">Maps</string>
    <string name="provider_gps">GPS</string>
    <string name="provider_network">Network</string>
    <string name="location_settings">Location settings</string>
    <string name="START">Старт</string>
    <string name="gps">GPS</string>
    <string name="Long">Long</string>
    <string name="lat">Lat</string>
</resources>