<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:id="@+id/linearLayout">


    <TextView
            android:text="@string/address"
            android:layout_width="287dp"
            android:layout_height="30dp" android:id="@+id/addressText" android:textSize="24sp"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="244dp" android:layout_marginStart="16dp"
            android:textColorHighlight="#FFFFFF"/>
    <TextView
            android:text="@string/phone"
            android:layout_width="287dp"
            android:layout_height="30dp" android:id="@+id/phoneText" android:textSize="24sp"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="188dp" android:layout_marginStart="16dp"
            android:textColorHighlight="#FFFFFF"/>
    <TextView
            android:text="@string/customer"
            android:layout_width="287dp"
            android:layout_height="30dp" android:id="@+id/customerText" android:textSize="24sp"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="132dp" android:layout_marginStart="16dp"
            android:textColorHighlight="#FFFFFF"/>
    <TextView
            android:text="@string/discriptionOrder"
            android:layout_width="197dp"
            android:layout_height="31dp" android:id="@+id/DiscriptionText" android:textSize="24sp"
            android:textColor="#000000"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="64dp" android:layout_marginStart="108dp"/>

    <TextView
            android:id="@+id/tvLocationGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="349dp" android:layout_marginStart="26dp"
            app:layout_constraintStart_toEndOf="@+id/imageview" android:text="@string/Long">
    </TextView>
    <TextView
            android:id="@+id/tvLocationGPS2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="440dp" android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/imageview" android:text="@string/lat">
    </TextView>
    <TextView
            android:id="@+id/tvLocationLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="388dp" android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/imageview">
    </TextView>
    <TextView
            android:id="@+id/tvLocationLat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="492dp" android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/imageview">
    </TextView>
    <ImageView
            android:id="@+id/imageview"
            android:layout_width="163dp"
            android:layout_height="245dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.064" app:layout_constraintVertical_bias="0.906"/>
    <Button
            android:text="@string/camera"
            android:textColor="@color/white"
            android:background="@color/purple_200"
            android:id="@+id/button"
            android:layout_width="241dp"
            android:layout_height="47dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.829" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="55dp"/>
    <Button
            android:text="@string/START"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"
            android:layout_marginTop="37dp" app:layout_constraintTop_toBottomOf="@+id/imageview"/>

</androidx.constraintlayout.widget.ConstraintLayout>