<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment">

    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editTextTextPassword2"
            tools:visibility="visible" android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="99dp"
            android:layout_marginStart="99dp"
            app:layout_constraintBottom_toTopOf="@+id/login" android:layout_marginEnd="99dp"
            android:layout_marginRight="99dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="5dp"/>

    <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextTextPassword3"
            tools:visibility="visible" android:hint="@string/login"
            android:layout_marginTop="57dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="99dp"
            android:layout_marginStart="99dp" android:layout_marginEnd="99dp" android:layout_marginRight="99dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="5dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="228dp"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:src="@tools:sample/avatars" android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="140dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="141dp" android:layout_marginEnd="142dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword3" android:visibility="visible"
            tools:visibility="visible" android:contentDescription="@string/app_name"/>
</android.support.constraint.ConstraintLayout>